--- a/productLandingPage.html
+++ b/productLandingPage.html
@@ -1,1 +1,77 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/0e966d6af3.js"></script>
+    <link rel="stylesheet" href="productLandingPage.css">
+    <title>Product Landing Page</title>
+</head>
+<body>
+    
+    <main>
 
+        <div id="header">
+            <div id="header-img">
+                <img src="images/original_trombones.png" alt="">
+            </div>
+            <div id="links">
+                <ul id="lista1" style="list-style: none;">
+                        <li class="lis"><a href="https://www.google.com/">Features</a></li>
+                        <li class="lis"><a href="https://www.google.com/">How it Works</a></li>
+                        <li class="lis"><a href="https://www.google.com/">Pricing</a></li>
+                </ul>        
+            </div>
+        </div>
+
+        <div id="title">
+            <h1>Handcrafted, home-made masterpieces</h1>
+        </div>
+
+        <div id="formulario">
+            <form action="">                
+                <input type="text" class="text-input" name="email" id="email" placeholder="Enter our email address...">
+                <input type="submit" name="submit" id="submit" value="
+                Get Started" >
+            </form>
+        </div>
+
+        <div class="container">
+            <div class="features">
+                <div class="grid">
+                    <div class="icon">
+                        <i class="fa fa-3x fa-fire"></i>
+                    </div>
+                    <div class="description">
+                        <h2>Premium Materials</h2>
+                        <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+                    </div>
+                </div>
+                <div class="grid">
+                        <div class="icon">
+                            <i class="fa fa-3x fa-truck"></i>
+                        </div>
+                        <div class="description">
+                            <h2>Fast Shipping</h2>
+                            <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+                        </div>
+                </div>
+                <div class="grid">
+                        <div class="icon">
+                            <i class="fa fa-3x fa-battery-full"></i>
+                        </div>
+                        <div class="description">
+                            <h2>Quality Assurance</h2>
+                            <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+                        </div>
+                </div>
+            </div>
+        </div>
+
+        
+
+    </main>
+
+</body>
+</html>
